file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/serializer_example/*.cpp)
add_executable(ichor_serializer_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_serializer_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_serializer_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/minimal_example/*.cpp)
add_executable(ichor_minimal_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_minimal_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_minimal_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/introspection_example/*.cpp)
add_executable(ichor_introspection_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_introspection_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_introspection_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/factory_example/*.cpp)
add_executable(ichor_factory_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_factory_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_factory_example ichor)

if(NOT WIN32 AND NOT APPLE)
	file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/tcp_example/*.cpp)
	add_executable(ichor_tcp_example ${EXAMPLE_SOURCES})
	target_link_libraries(ichor_tcp_example ${CMAKE_THREAD_LIBS_INIT})
	target_link_libraries(ichor_tcp_example ichor)
endif()

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/timer_example/*.cpp)
add_executable(ichor_timer_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_timer_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_timer_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/yielding_timer_example/*.cpp)
add_executable(ichor_yielding_timer_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_yielding_timer_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_yielding_timer_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/multithreaded_example/*.cpp)
add_executable(ichor_multithreaded_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_multithreaded_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_multithreaded_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/event_statistics_example/*.cpp)
add_executable(ichor_event_statistics_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_event_statistics_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_event_statistics_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/optional_dependency_example/*.cpp)
add_executable(ichor_optional_dependency_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_optional_dependency_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_optional_dependency_example ichor)

file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/realtime_example/gsm_enc/*.cpp)
file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/realtime_example/*.cpp)
add_executable(ichor_realtime_example ${EXAMPLE_SOURCES})
target_link_libraries(ichor_realtime_example ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_realtime_example ichor)

if(ICHOR_USE_BOOST_BEAST)
    file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/etcd_example/*.cpp)
    add_executable(ichor_etcd_example ${EXAMPLE_SOURCES})
    target_link_libraries(ichor_etcd_example ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(ichor_etcd_example ichor)
    target_link_libraries(ichor_etcd_example ${ETCD_TARGET})

    file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/websocket_example/*.cpp)
    add_executable(ichor_websocket_example ${EXAMPLE_SOURCES})
    target_link_libraries(ichor_websocket_example ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(ichor_websocket_example ichor)

    file(GLOB_RECURSE EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/http_example/*.cpp)
    add_executable(ichor_http_example ${EXAMPLE_SOURCES})
    target_link_libraries(ichor_http_example ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(ichor_http_example ichor)

    set(EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/http_ping_pong/ping.cpp)
    add_executable(ichor_ping_example ${EXAMPLE_SOURCES})
    target_link_libraries(ichor_ping_example ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(ichor_ping_example ichor)

    set(EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/examples/http_ping_pong/pong.cpp)
    add_executable(ichor_pong_example ${EXAMPLE_SOURCES})
    target_link_libraries(ichor_pong_example ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(ichor_pong_example ichor)
endif()
